# TinySqlite

./: CMakeLists.txt  run_tests.sh
src/: command.hpp  database.hpp  main.cpp  sql_parser.hpp  util.hpp
tests/: CMakeLists.txt  test_database.cpp  test_dbinfo.cpp
